--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@mantine/hooks": "^7.15.1",
+    "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-toggle": "^1.1.1",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tabler/icons-react": "^3.26.0",
     "class-variance-authority": "^0.7.1",
