--- a/package.json
+++ b/package.json
@@ -17,25 +17,22 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@mantine/hooks": "^7.15.1",
+    "@radix-ui/react-checkbox": "^1.1.3",
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toggle": "^1.1.1",
     "@t3-oss/env-nextjs": "^0.10.1",
-    "@tabler/icons-react": "^3.26.0",
     "@tanstack/react-query": "^5.62.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
-    "geist": "^1.3.0",
-    "lucide": "^0.469.0",
     "lucide-react": "^0.469.0",
     "motion": "^11.15.0",
     "next": "^15.0.1",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-dropzone": "^14.3.5",
     "react-resizable-panels": "^2.1.7",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
@@ -58,6 +55,7 @@
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.3",
+    "tailwindcss-motion": "^1.0.0",
     "typescript": "^5.5.3"
   },
   "ct3aMetadata": {
