--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.62.8",
+    "@types/file-saver": "^2.0.7",
+    "@types/react-easy-crop": "^2.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "file-saver": "^2.0.5",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.469.0",
     "motion": "^11.15.0",
@@ -33,6 +36,7 @@
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-easy-crop": "^5.2.0",
     "react-resizable-panels": "^2.1.7",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
