--- a/package.json
+++ b/package.json
@@ -18,9 +18,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
-    "@radix-ui/react-checkbox": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-label": "^2.1.1",
-    "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-toggle": "^1.1.1",
@@ -34,7 +33,6 @@
     "file-saver": "^2.0.5",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.469.0",
-    "motion": "^11.15.0",
     "next": "^15.0.1",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
@@ -50,6 +48,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/eslint": "^8.56.10",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
